--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="icon" href="https://wahinekaidevelopment.blob.core.windows.net/frontend-assets/favicon.ico" />
+    <link rel="icon" href="https://memberdatabasestorage.blob.core.windows.net/frontend-assets/favicon.ico" />
     <title>Docs | Wahine Kai</title>
      <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
