Update navbar logo source

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container">
         <a class="navbar-brand" rel="author" class="mx-2" href="{{ "/" | relative_url }}">
-          <img src="https://wahinekaidevelopment.blob.core.windows.net/frontend-assets/squareLogo.png" alt="Navbar Logo" width="35" height="35" class="mx-2">
+          <img src="https://memberdatabasestorage.blob.core.windows.net/frontend-assets/squareLogo.png" alt="Navbar Logo" width="35" height="35" class="mx-2">
           Wahine Kai Documentation
         </a>
 
